--- a/lessons.html
+++ b/lessons.html
@@ -62,7 +62,7 @@
                     <div class="lesson-text-content">
                         <div class="lesson-title-wrapper">
                             <h4>Analyse des Métadonnées</h4>
-                            <span class="difficulty-tag difficulty-medium">Confirmé</span>
+                            <span class="difficulty-tag difficulty-medium">Initié</span>
                         </div>
                         <p>Traquez les incohérences entre les métadonnées pour révéler les manipulations.</p>
                     </div>
