--- a/lessons/forensics-metadata.html
+++ b/lessons/forensics-metadata.html
@@ -32,7 +32,7 @@
                         Traquez les incohérences entre les métadonnées pour révéler les manipulations.
                     </p>
                 </div>
-                <span class="difficulty-tag difficulty-medium">Confirmé</span>
+                <span class="difficulty-tag difficulty-medium">Initié</span>
             </header>
 
             <section class="lesson-block">
