--- a/challenges.html
+++ b/challenges.html
@@ -45,12 +45,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="forensics-metadata-hunt">
+                <a href="#" class="card challenge-card" data-challenge-id="forensics-metadata-hunt">
                     <i class="fas fa-search card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Chasse aux Métadonnées</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 25 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>Une image cache des informations cruciales dans ses métadonnées. Trouvez le flag !</p>
                     </div>
@@ -65,12 +65,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">Culture de la Sécurité</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="security-phishing-test">
+                <a href="#" class="card challenge-card" data-challenge-id="security-phishing-test">
                     <i class="fas fa-fish card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Hameçon Furtif</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 25 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>Analysez cet email suspect. Contient-il un lien de phishing ? Identifiez l'indice.</p>
                     </div>
@@ -85,12 +85,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">Cryptographie</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="crypto-cesar-salad">
+                <a href="#" class="card challenge-card" data-challenge-id="crypto-cesar-salad">
                     <i class="fas fa-key card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Salade César</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 25 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>Un message chiffré a été intercepté. Il semble utiliser une méthode antique...</p>
                     </div>
@@ -105,12 +105,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">OSINT</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="osint-find-me">
+                <a href="#" class="card challenge-card" data-challenge-id="osint-find-me">
                     <i class="fas fa-user-secret card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Retrouve-moi</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 50 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>À partir d'un simple pseudo, retrouvez le réseau social principal de cette personne.</p>
                     </div>
@@ -125,7 +125,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Pwned (Exploitation Binaire)</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="pwned-placeholder" style="cursor: not-allowed; opacity: 0.7;">
+                <a href="#" class="card challenge-card" data-challenge-id="pwned-placeholder" style="cursor: not-allowed; opacity: 0.7;">
                     <i class="fas fa-terminal card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -143,12 +143,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">Sécurité Réseau</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="network-port-scan">
+                <a href="#" class="card challenge-card" data-challenge-id="network-port-scan">
                     <i class="fas fa-network-wired card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Port Ouvert</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 50 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>Scannez l'adresse IP fournie et trouvez le port non standard qui est ouvert.</p>
                     </div>
@@ -163,12 +163,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">Stéganographie</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="stega-hidden-art">
+                <a href="#" class="card challenge-card" data-challenge-id="stega-hidden-art">
                     <i class="fas fa-file-image card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>L'Art Caché</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 50 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>Un message est dissimulé dans cette image. Utilisez les bons outils pour l'extraire.</p>
                     </div>
@@ -183,12 +183,12 @@
         <section class="category-section">
             <h2 class="main-title category-title">Web Hacking</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="web-cookie-monster">
+                <a href="#" class="card challenge-card" data-challenge-id="web-cookie-monster">
                     <i class="fas fa-cookie-bite card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Le Monstre des Cookies</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant | 50 pts</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fa-solid fa-flag"></i></span>
                         </div>
                         <p>Ce site utilise des cookies pour gérer les sessions. Pouvez-vous devenir administrateur ?</p>
                     </div>
@@ -206,12 +206,12 @@
         <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="./images/logo.webp" alt="Logo du club Krhacken"> </a>
         <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="./images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
         <p class="footer-legal">
-            L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
+            L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 25 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
             EMAIL : <a href="mailto:contact@krhacken.org">contact@krhacken.org</a>
         </p>
     </footer>
 
-    <script src="./js/challenges.js" defer></script>
+    <script src="./js/progress-tracker.js" defer></script>
     <script src="./js/header.js" defer></script>
 
 </body>
