--- a/lessons.html
+++ b/lessons.html
@@ -266,7 +266,7 @@
         </p>
     </footer>
 
-    <script src="./js/lessons.js" defer></script>
+    <script src="./js/progress-tracker.js" defer></script>
     <script src="./js/header.js" defer></script>
 
 </body>
