--- a/lessons.html
+++ b/lessons.html
@@ -44,7 +44,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
-                <a href="./lessons/forensics-intro.html" class="card completed" data-lesson-id="forensics-intro">
+                <a href="./lessons/forensics-intro.html" class="card" data-lesson-id="forensics-intro">
                     <i class="fas fa-fingerprint card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
