--- a/challenges.html
+++ b/challenges.html
@@ -33,12 +33,13 @@
         </nav>
         <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav-links"></button>
         <button id="search-toggle-btn" class="fas fa-search" aria-label="Ouvrir la barre de recherche" aria-expanded="false" aria-controls="filter-controls"></button>
+        <button id="profile-toggle-btn" class="fas fa-user-circle" aria-label="Ouvrir le menu du profil" aria-expanded="false" aria-controls="profile-menu"></button>
     </header>
 
-    <section class="filter-controls" id="filter-controls" aria-hidden="true">
-        <i class="fas fa-search filter-icon"></i>
-        <div class="search-wrapper">
-            <input type="search" id="search-input" placeholder="Rechercher par nom..." aria-label="Rechercher un challenge par nom">
+    <section class="search-panel" id="filter-controls" aria-hidden="true">
+        <i class="fas fa-search panel-icon"></i>
+        <div class="input-wrapper">
+            <input type="search" id="search-input" placeholder="Rechercher par nom" aria-label="Rechercher un objet par nom">
             <button id="clear-search-btn" class="fas fa-times" aria-label="Effacer la recherche"></button>
         </div>
         
@@ -65,6 +66,19 @@
         </div>
 
         <button id="close-filter-btn" class="fas fa-times" aria-label="Fermer la barre de recherche"></button>
+    </section>
+
+    <section class="profile-panel" id="profile-menu" aria-hidden="true">
+        <div class="profile-header">
+            <i class="fas fa-user-circle panel-icon"></i>
+            <span class="profile-username">Utilisateur Anonyme</span>
+            <button id="close-profile-btn" class="fas fa-times" aria-label="Fermer le menu du profil"></button>
+        </div>
+        <ul class="profile-options">
+            <li><a href="#"><i class="fas fa-user fa-fw"></i> Mon Profil</a></li>
+            <li><a href="#"><i class="fas fa-cog fa-fw"></i> Paramètres</a></li>
+            <li><a href="#"><i class="fas fa-sign-out-alt fa-fw"></i> Déconnexion</a></li>
+        </ul>
     </section>
 
     <main class="main-container">
@@ -225,6 +239,10 @@
                 </a>
             </div>
         </section>
+        
+        <div id="no-results-message" class="no-results" style="display: none;">
+            <p>Aucun challenge ne correspond à votre recherche.</p>
+        </div>
     </main>
 
     <footer>
